--- a/text_analytics/skeletons/Test Notebook.ipynb
+++ b/text_analytics/skeletons/Test Notebook.ipynb
@@ -59,6 +59,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diliu\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"diliu\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
