More working on text analysis

--- a/text_analytics/skeletons/Text Analysis Exercise One.ipynb
+++ b/text_analytics/skeletons/Text Analysis Exercise One.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
        "['DESCR', 'data', 'target', 'target_names', 'filenames']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -237,18 +237,8 @@
      "text": [
       "(2257, 35787)\n",
       "[0, 5195]   (0, 0)\t0.0753778361444\n",
-      "(2257, 35787)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'TfidfTransformer' object has no attribute '_idf_diag'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-50-a0294647a18c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mX_train_tfidf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mtf_transformer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_idf_diag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"[0, 5195]\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train_tf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetrow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetcol\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5195\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'TfidfTransformer' object has no attribute '_idf_diag'"
+      "(2257, 35787)\n",
+      "[0, 5195]   (0, 0)\t0.0753778361444\n"
      ]
     }
    ],
@@ -266,14 +256,12 @@
     "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
     "print X_train_tfidf.shape\n",
     "\n",
-    "print tf_transformer._idf_diag\n",
-    "\n",
     "print \"[0, 5195]\", X_train_tf.getrow(0).getcol(5195)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -282,26 +270,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'b' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-56-a1d457c61277>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'b' is not defined"
+      "  (0, 20537)\t0.809401056239\n",
+      "  (0, 18474)\t0.255894264685\n",
+      "  (0, 15521)\t0.528571712694\n",
+      "  (1, 32141)\t0.0891122234242\n",
+      "  (1, 23789)\t0.600483554876\n",
+      "  (1, 23733)\t0.128412754679\n",
+      "  (1, 18474)\t0.100340184397\n",
+      "  (1, 15628)\t0.677839555469\n",
+      "  (1, 14048)\t0.381384400353\n",
+      "  (2, 15521)\t0.45724798045\n",
+      "  (2, 14048)\t0.841388285598\n",
+      "  (2, 5410)\t0.288079914666\n",
+      "'God is love' => soc.religion.christian\n",
+      "'OpenGL on the GPU is fast' => comp.graphics\n",
+      "'god gpus are fast!' => soc.religion.christian\n"
      ]
     }
    ],
    "source": [
-    "print \"hello world\"\n",
+    "from sklearn.naive_bayes import MultinomialNB \n",
+    "clf = MultinomialNB().fit(X_train_tfidf, twenty_train.target) \n",
     "\n",
-    "a = 1\n",
-    "print b"
+    "docs_new = ['God is love', 'OpenGL on the GPU is fast', 'god gpus are fast!']\n",
+    "X_new_counts = count_vect.transform(docs_new)\n",
+    "X_new_tfidf = tfidf_transformer.transform(X_new_counts)\n",
+    "\n",
+    "print X_new_tfidf\n",
+    "\n",
+    "predicted = clf.predict(X_new_tfidf)\n",
+    "\n",
+    "for doc, category in zip(docs_new, predicted):\n",
+    "    print('%r => %s' % (doc, twenty_train.target_names[category])) "
    ]
   },
   {
@@ -313,14 +313,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline(steps=[('vect', CountVectorizer(analyzer=u'word', binary=False, decode_error=u'strict',\n",
+      "        dtype=<type 'numpy.int64'>, encoding=u'utf-8', input=u'content',\n",
+      "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+      "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+      "        st...False,\n",
+      "         use_idf=True)), ('clf', MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))])\n",
+      "Pipeline(steps=[('vect', CountVectorizer(analyzer=u'word', binary=False, decode_error=u'strict',\n",
+      "        dtype=<type 'numpy.int64'>, encoding=u'utf-8', input=u'content',\n",
+      "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+      "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+      "        st...False,\n",
+      "         use_idf=True)), ('clf', MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a pipeline \n",
+    "from sklearn.pipeline import Pipeline \n",
+    "\n",
+    "text_clf = Pipeline([('vect', CountVectorizer()), \n",
+    "                     ('tfidf', TfidfTransformer()), \n",
+    "                     ('clf', MultinomialNB())])\n",
+    "\n",
+    "print text_clf\n",
+    "text_clf = text_clf.fit(twenty_train.data, twenty_train.target)\n",
+    "\n",
+    "print text_clf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above we made a pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2 3 ..., 2 2 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.83488681757656458"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "twenty_test = fetch_20newsgroups(subset='test',\n",
+    "    categories=categories, shuffle=True, random_state=42)\n",
+    "docs_test = twenty_test.data\n",
+    "predicted = text_clf.predict(docs_test)\n",
+    "print predicted\n",
+    "np.mean(predicted == twenty_test.target)\n",
+    "\n",
+    "# we should practice some plotting here to look into these results more!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "b = 2"
-   ]
+   "source": []
   }
  ],
  "metadata": {
